<resources>
    <string name="app_name">AroundMe</string>
    <string name="settings">Settings</string>
    <string name="clear">Clear</string>
    <string name="cancel">Cancel</string>
    <string name="close">Close</string>
    <string name="call">Call</string>
    <string name="save">Save</string>
    <string name="website">Website</string>
    <string name="favorites">Favorites</string>
    <string name="share">Share</string>
    <string name="hide">Hide</string>
    <string name="no_internet">No Internet Connection!</string>

    <!--Main Activity-->
    <string name="no_places_found">No places found!</string>
    <string name="no_favorites">No favorites!</string>
    <string name="charging">Charging</string>
    <string name="places_around_you">Places around you</string>
    <string name="search_text">Search for a place</string>
    <string name="no_search_results">No search results</string>

    <!--ViewPlace Activity-->
    <string name="view_place_activity_title">Place Details</string>
    <string name="rate_text">Rate: %1$s</string>
    <string name="price_text">Price: %1$s</string>
    <string name="place_not_found">Place not found</string>
    <string-array name="price_levels">
        <item>Free</item>
        <item>Inexpensive</item>
        <item>Moderate</item>
        <item>Expensive</item>
        <item>Very Expensive</item>
    </string-array>

    <!--Places Adapter-->
    <string-array name="place_longclick">
        <item>Save</item>
        <item>Share</item>
        <item>Cancel</item>
    </string-array>

    <!--General Prefs-->
    <string name="pref_header_general">General</string>
    <string name="pref_distance_unit">Distance unit</string>
    <string name="pref_clear_fav">Clear favorites</string>
    <string name="pref_clear_fav_message">You are about to clear all favorites!</string>
    <string name="pref_clear_history">Clear history</string>
    <string name="pref_clear_history_message">You are about to clear all history!</string>
    <string-array name="pref_distance_unit_titles">
        <item>"Meters / Kilometers"</item>
        <item>Miles</item>
    </string-array>
    <string-array name="pref_distance_unit_values">
        <item>1</item>
        <item>2</item>
    </string-array>

    <!--Style Prefs-->
    <string name="pref_header_style">Style</string>
    <string name="pref_night_theme">Night theme</string>
    <string name="pref_map_style">Map style</string>
    <string-array name="pref_night_theme_titles">
        <item>Standard</item>
        <item>Night</item>
        <item>Silver</item>
        <item>Retro</item>
        <item>Dark</item>
        <item>Aubergine</item>
    </string-array>
    <string-array name="pref_night_theme_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>
</resources>
