<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinator"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <fragment
            android:id="@+id/mapFragment"
            android:name="com.google.android.gms.maps.MapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <com.arlib.floatingsearchview.FloatingSearchView
            android:id="@+id/floatingSearchView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:floatingSearch_leftActionMode="showSearch"
            app:floatingSearch_menu="@menu/search_menu"
            app:floatingSearch_searchBarMarginLeft="8dp"
            app:floatingSearch_searchBarMarginRight="8dp"
            app:floatingSearch_searchBarMarginTop="8dp"
            app:floatingSearch_searchHint="@string/search_text" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/aroundMeFAB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_margin="16dp"
            app:backgroundTint="@color/fabBack"
            app:elevation="1dp"
            app:fabSize="normal"
            app:srcCompat="@drawable/ic_aroundme" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/myLocationFAB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/aroundMeFAB"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="16dp"
            app:backgroundTint="@color/fabBack"
            app:elevation="1dp"
            app:fabSize="normal"
            app:srcCompat="@drawable/ic_my_location_2" />

        <android.support.v7.widget.CardView
            android:id="@+id/chargingView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="16dp"
            android:visibility="gone"
            app:cardBackgroundColor="@color/fabBack"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    app:srcCompat="@drawable/ic_battery_charging" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:paddingBottom="8dp"
                    android:paddingEnd="8dp"
                    android:paddingStart="0dp"
                    android:paddingTop="8dp"
                    android:text="@string/charging" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

    </RelativeLayout>


    <LinearLayout
        android:id="@+id/bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="@color/bottomSheetBackground"
        android:elevation="10dp"
        android:orientation="vertical"
        app:behavior_peekHeight="0dp"
        app:layout_behavior="@string/bottom_sheet_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/bottomSheetTop"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/bottomSheetTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="16dp"
                android:text="@string/places_around_you"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/bottomSheetHideTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:padding="16dp"
                android:text="@string/close" />

        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/background" />

        <TextView
            android:id="@+id/noContentTextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:visibility="gone" />

        <ProgressBar
            android:id="@+id/placesProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:indeterminate="true" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="vertical"
            android:visibility="gone" />

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
