<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_view_place"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ViewPlaceActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v4.view.ViewPager
            android:id="@+id/placeViewPager"
            android:layout_width="0dp"
            android:layout_height="250dp"
            android:background="@color/background"
            android:elevation="6dp"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ProgressBar
            android:id="@+id/progressBar2"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/placeViewPager"
            app:layout_constraintEnd_toEndOf="@+id/placeViewPager"
            app:layout_constraintStart_toStartOf="@+id/placeViewPager"
            app:layout_constraintTop_toTopOf="@+id/placeViewPager" />

        <me.relex.circleindicator.CircleIndicator
            android:id="@+id/indicator"
            android:layout_width="0dp"
            android:layout_height="15dp"
            android:layout_marginBottom="4dp"
            android:elevation="6dp"
            app:layout_constraintBottom_toBottomOf="@+id/placeViewPager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <LinearLayout
            android:id="@+id/callLL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/placeViewPager">

            <ImageView
                android:id="@+id/phoneImageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                app:srcCompat="@drawable/ic_phone" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/call"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/saveLL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:orientation="vertical"
            app:layout_constraintEnd_toStartOf="@+id/urlLL"
            app:layout_constraintStart_toEndOf="@+id/callLL"
            app:layout_constraintTop_toBottomOf="@+id/placeViewPager">

            <ImageView
                android:id="@+id/starPlaceImageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                app:srcCompat="@drawable/ic_star_off_big" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/save"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/urlLL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginTop="16dp"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/placeViewPager">

            <ImageView
                android:id="@+id/websiteImageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                app:srcCompat="@drawable/ic_website" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/website"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>

        <TextView
            android:id="@+id/placeViewNameTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:textAlignment="viewStart"
            android:textAppearance="?android:attr/textAppearanceLarge"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/streetIconImageView"
            app:layout_constraintTop_toBottomOf="@+id/saveLL"
            tools:text="Name" />

        <TextView
            android:id="@+id/placeViewAddressTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:textAlignment="viewStart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/placeViewNameTextView"
            app:layout_constraintTop_toBottomOf="@+id/placeViewNameTextView"
            tools:text="Address" />

        <TextView
            android:id="@+id/placeViewPriceTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="8dp"
            android:textAlignment="viewStart"
            app:layout_constraintBottom_toBottomOf="@+id/priceIconImageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/priceIconImageView"
            app:layout_constraintTop_toTopOf="@+id/priceIconImageView"
            tools:text="Price" />

        <TextView
            android:id="@+id/placeViewRateTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="8dp"
            android:textAlignment="viewStart"
            app:layout_constraintBottom_toBottomOf="@+id/ratingIconImageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ratingIconImageView"
            app:layout_constraintTop_toTopOf="@+id/ratingIconImageView"
            tools:text="Rate" />

        <ImageView
            android:id="@+id/streetIconImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@+id/placeViewAddressTextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/placeViewNameTextView"
            app:srcCompat="@drawable/ic_street" />

        <ImageView
            android:id="@+id/ratingIconImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:visibility="invisible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/placeViewAddressTextView"
            app:srcCompat="@drawable/ic_star_on_big" />

        <ImageView
            android:id="@+id/priceIconImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:visibility="invisible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ratingIconImageView"
            app:srcCompat="@drawable/ic_dollar" />

    </android.support.constraint.ConstraintLayout>

</ScrollView>
